hphp/hack/test/typecheck/lambda/lambda20.php.like_types.exp
File "lambda20.php", line 4, characters 10-38:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
