hphp/hack/test/typecheck/lambda/lambda20.php
<?hh // strict

function foo(): (function(int, string, ...): int) {
  return (int $x, $y, ...) ==> $x;
}
